--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -24,16 +24,16 @@ jobs:
    # This action sets up the JFrog CLI with the Artifactory URL and access token     
    - uses: jfrog/setup-jfrog-cli@v3
      env:
-       JF_URL: "https://venkata14.jfrog.io"
-       JF_ACCESS_TOKEN: "eyJ2ZXIiOiIyIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYiLCJraWQiOiJrUzlFVV8zMnZpTWRpb0RsSDYxbG02OXpfU3I2S2NBNHNpaWJxY1h0N1ZnIn0.eyJzdWIiOiJqZmFjQDAxaHJ0anE5Njhxa2g0MDJqZG0zdDIwem10L3VzZXJzL2FkbWluIiwic2NwIjoiYXBwbGllZC1wZXJtaXNzaW9ucy9hZG1pbiIsImF1ZCI6IipAKiIsImlzcyI6ImpmZmVAMDFocnRqcTk2OHFraDQwMmpkbTN0MjB6bXQiLCJpYXQiOjE3MTAzNTI1MjEsImp0aSI6ImIzYTFhNWY4LTAyMjktNGNmZi1hNjBhLTVkYTNmM2ViZjQ1MyJ9.TB9LyeaIg0u-21uqAeZHcNxkV34jQivc5zNWf_uPe1XKQQhtkzlikRzZ_RSlWzMW76_Noh-a2pKF5_-3QafQyhbPO4KbYzJSQiIYZobCtucPIZ9Z2MEpUOcQnelRRXUDL1t7ZpeFMENJ0Xn5x2J0Ng7E9VjUxeixiuc2JbzxknC03z9Eh0n0p4XQ6667fr3Vgf9X5afyyza_HIQ-uTPbItmeIt802QY_JaXEbbUc_t2g01lqik9lLSx7mj3N53DVYh_VZxIkClNe3RpTn_TLcSIxbWjPVJA3DImnQDynzbZ2bIM59gppEczNB9hnPvjHo2M2d0K7M286_1l7IDUVvg"
+       JF_URL: "https://venkata7.jfrog.io"
+       JF_ACCESS_TOKEN: "eyJ2ZXIiOiIyIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYiLCJraWQiOiJmUHhRTTk0ZGQ1eW1rellOcV95R3d5ak82T2RvZFhzTDF5YWJDVm5GdWtrIn0.eyJzdWIiOiJqZmFjQDAxaHN4MTJ3Z2ZtMTVjMDRuYXpqNGcwMnJtL3VzZXJzL2FkbWluIiwic2NwIjoiYXBwbGllZC1wZXJtaXNzaW9ucy9hZG1pbiIsImF1ZCI6IipAKiIsImlzcyI6ImpmZmVAMDFoc3gxMndnZm0xNWMwNG5hemo0ZzAycm0iLCJpYXQiOjE3MTE2OTQ4MDIsImp0aSI6IjBjNmFjZmNjLWFjMzItNDY0OS04NmJiLWIzMWZkYjQxNjk3ZCJ9.GCn1a1rw8W_mZPyv_B18KFByVAoqJ8jUMMBC-vsrn-31GOOjLeWKSSWherKHfHCgihi2EvVQ-mDe41KBlVcE7C0S_PDRl4oIGp9eT1qnjwbkkEy1xJ1ijnGZ9iSItQ7rBwGySa1HyT-3JnbXwWQ4K4qsnUDFsS7NYFnyOjv15skr2tV558FCGPxS_223z_CMj7Qz7OxgnqezobZmFv6VNK3e8u9CCKCR5M9KSdfpAXTBjZCkzhC8xkLurkgZwl-y_Xo3yzxdWit6LyVh5bBc1c-kWsClEoFzB3-tGPJjgl8LFspwtq7aNJeDDFbhvFY8WXtaZAM40tnG6R-F_iXbJw"
 
 
    # This command adds a new server configuration to the JFrog CLI   
    - run: |
-       export SERVER_ID="venkata14"
-       jf c add $SERVER_ID --url="https://venkata14.jfrog.io" --access-token="eyJ2ZXIiOiIyIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYiLCJraWQiOiJrUzlFVV8zMnZpTWRpb0RsSDYxbG02OXpfU3I2S2NBNHNpaWJxY1h0N1ZnIn0.eyJzdWIiOiJqZmFjQDAxaHJ0anE5Njhxa2g0MDJqZG0zdDIwem10L3VzZXJzL2FkbWluIiwic2NwIjoiYXBwbGllZC1wZXJtaXNzaW9ucy9hZG1pbiIsImF1ZCI6IipAKiIsImlzcyI6ImpmZmVAMDFocnRqcTk2OHFraDQwMmpkbTN0MjB6bXQiLCJpYXQiOjE3MTAzNTI1MjEsImp0aSI6ImIzYTFhNWY4LTAyMjktNGNmZi1hNjBhLTVkYTNmM2ViZjQ1MyJ9.TB9LyeaIg0u-21uqAeZHcNxkV34jQivc5zNWf_uPe1XKQQhtkzlikRzZ_RSlWzMW76_Noh-a2pKF5_-3QafQyhbPO4KbYzJSQiIYZobCtucPIZ9Z2MEpUOcQnelRRXUDL1t7ZpeFMENJ0Xn5x2J0Ng7E9VjUxeixiuc2JbzxknC03z9Eh0n0p4XQ6667fr3Vgf9X5afyyza_HIQ-uTPbItmeIt802QY_JaXEbbUc_t2g01lqik9lLSx7mj3N53DVYh_VZxIkClNe3RpTn_TLcSIxbWjPVJA3DImnQDynzbZ2bIM59gppEczNB9hnPvjHo2M2d0K7M286_1l7IDUVvg" --interactive=false
+       export SERVER_ID="venkata7"
+       jf c add $SERVER_ID --url="https://venkata14.jfrog.io" --access-token="eyJ2ZXIiOiIyIiwidHlwIjoiSldUIiwiYWxnIjoiUlMyNTYiLCJraWQiOiJmUHhRTTk0ZGQ1eW1rellOcV95R3d5ak82T2RvZFhzTDF5YWJDVm5GdWtrIn0.eyJzdWIiOiJqZmFjQDAxaHN4MTJ3Z2ZtMTVjMDRuYXpqNGcwMnJtL3VzZXJzL2FkbWluIiwic2NwIjoiYXBwbGllZC1wZXJtaXNzaW9ucy9hZG1pbiIsImF1ZCI6IipAKiIsImlzcyI6ImpmZmVAMDFoc3gxMndnZm0xNWMwNG5hemo0ZzAycm0iLCJpYXQiOjE3MTE2OTQ4MDIsImp0aSI6IjBjNmFjZmNjLWFjMzItNDY0OS04NmJiLWIzMWZkYjQxNjk3ZCJ9.GCn1a1rw8W_mZPyv_B18KFByVAoqJ8jUMMBC-vsrn-31GOOjLeWKSSWherKHfHCgihi2EvVQ-mDe41KBlVcE7C0S_PDRl4oIGp9eT1qnjwbkkEy1xJ1ijnGZ9iSItQ7rBwGySa1HyT-3JnbXwWQ4K4qsnUDFsS7NYFnyOjv15skr2tV558FCGPxS_223z_CMj7Qz7OxgnqezobZmFv6VNK3e8u9CCKCR5M9KSdfpAXTBjZCkzhC8xkLurkgZwl-y_Xo3yzxdWit6LyVh5bBc1c-kWsClEoFzB3-tGPJjgl8LFspwtq7aNJeDDFbhvFY8WXtaZAM40tnG6R-F_iXbJw" --interactive=false
 
-
+  # Upload the JFrog Artifact, in the below we are upload README.md artifact.
    - name: Run JFrog CLI Ping
      run: |
           export JFROG_CLI_HOME="/home/runner/work/jenkins-test/jenkins-test"
@@ -42,6 +42,8 @@ jobs:
           jf rt bce
           # Publish build info
           jf rt bp
+          
+   # Download the JFrog Artifact, in the below we are Downloading README.md artifact.
    - name: Download Artifact
      run: |
           jf rt dl tf-trial/workspaces/jfrog-ws1/README.md ./ 
