--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@dev
+      uses: actions/checkout@v3
         
     - name: Run Tests with Maven
       run: mvn -B test --file pom.xml
