--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -161,28 +161,28 @@ jobs:
          # Sonar Project Key
          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
 
-  ServiceNowSecurityScanResults:
-    # type of machine to run the job on
-    runs-on: ubuntu-latest
-    name: ServiceNow Security Scan Results
-    needs: sonarScan
-    steps:
-      - name: ServiceNow DevOps Security Results
-        uses: ServiceNow/servicenow-devops-security-result@v3.1.0
-        with:
-            # DevOps Integration Token of GitHub tool created in ServiceNow instance for token based authentication.
-            # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-            devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
-            devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
-            # ServiceNow Instance URL
-            instance-url: ${{ secrets.SN_INSTANCE_URL }}
-            # Orchestration Tool Id
-            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-            # GitHub Context
-            context-github: ${{ toJSON(github) }}
-            # Display Name of the Job
-            job-name: 'ServiceNow Security Scan Results'
-            security-result-attributes: '{"scanner": "Veracode", "applicationName": "10kflaws-72"}'
+  # ServiceNowSecurityScanResults:
+  #   # type of machine to run the job on
+  #   runs-on: ubuntu-latest
+  #   name: ServiceNow Security Scan Results
+  #   needs: sonarScan
+  #   steps:
+  #     - name: ServiceNow DevOps Security Results
+  #       uses: ServiceNow/servicenow-devops-security-result@v3.1.0
+  #       with:
+  #           # DevOps Integration Token of GitHub tool created in ServiceNow instance for token based authentication.
+  #           # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #           devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+  #           devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+  #           # ServiceNow Instance URL
+  #           instance-url: ${{ secrets.SN_INSTANCE_URL }}
+  #           # Orchestration Tool Id
+  #           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+  #           # GitHub Context
+  #           context-github: ${{ toJSON(github) }}
+  #           # Display Name of the Job
+  #           job-name: 'ServiceNow Security Scan Results'
+  #           security-result-attributes: '{"scanner": "Veracode", "applicationName": "10kflaws-72"}'
             # scanner: Scanning tool and is required e.g. Veracode.
             # applicationName: Name of your Veracode application and is required. This attribute is applicable only for Veracode.
             # buildVersion: Veracode Scan name / build version and is optional. This attribute is applicable only for Veracode.
@@ -190,7 +190,7 @@ jobs:
 
   registerPackage:
     name: 'Register Package'
-    needs: [ServiceNowSecurityScanResults]
+    needs: [sonarScan]
     runs-on: ubuntu-latest
     steps:
     - name: ServiceNow DevOps Register Package
@@ -229,7 +229,7 @@ jobs:
     name: 'ServiceNow DevOps Change'
     steps:
       - name: ServiceNow Change
-        uses: ServiceNow/servicenow-devops-change@v4.0.0
+        uses: ServiceNow/servicenow-devops-change@v4.1.0
         with:
           # Devops Integration Token
           # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
@@ -261,7 +261,7 @@ jobs:
       - name: ServiceNow DevOps Get Change
         # You may pin to the exact commit or the version.
         # uses: ServiceNow/servicenow-devops-get-change@0f8b1914adeaec764a4286bdd9cba73ed1c6097f
-        uses: ServiceNow/servicenow-devops-get-change@v3.1.0
+        uses: ServiceNow/servicenow-devops-get-change@v4.1.0
         id: get_change
         with:
           # ServiceNow Instance URL
