--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -222,36 +222,37 @@ jobs:
           job-name: 'Register Package'
           
   change:
-    # jobs that must complete successfully before this job will run
-    needs: registerPackage
-    # type of machine to run the job on
+    name: Change Request
+    needs: build
     runs-on: ubuntu-latest
-    name: 'ServiceNow DevOps Change'
-    steps:
-      - name: ServiceNow Change
+    steps:     
+      - name: ServiceNow DevOps Change Attributes
         uses: ServiceNow/servicenow-devops-change@v4.1.0
         with:
-          # Devops Integration Token
-          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
-          devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
-          # ServiceNow Instance URL
+          # devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          # devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Orchestration Tool Id
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # GitHub Context
           context-github: ${{ toJSON(github) }}
-          # Display Name of the Job
-          job-name: 'ServiceNow DevOps Change'
-          change-request: '{"attributes":{"chg_model":{"name":"devops"}, "requested_by":{"name": "DevOps System"},"assignment_group":{"name": "Change management"},"priority": "2","comments": "This is a sample pipeline script to be added in your change step","work_notes": "Update this to work_notes"}}'
-          # You can specify the requested_by attribute either with name or sys_id. Example: "requested_by":{"name": "Test User"} or "requested_by": "62826bf03710200044e0bfc8bcbe5df1"
-          # You can specify the assignment_group attribute either with name or sys_id. Example: "assignment_group":{"name": "Change Approval Team"} or "assignment_group": "5f721d93c0a8010e015533746de18bf9"
-          # start_date: Enter the planned start date
-          # end_date: Enter the planned end date
+          job-name: 'Change Request'
+          change-request: '{"autoCloseChange":true,"attributes":{"chg_model": {"name": "Normal" },"short_description":"Automated Software Deployments","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed."}}'  
+          interval: '100'
+          timeout: '3600'
+          deployment-gate: '{"environment":"prod","jobId":"deploy","jobName":"Deploy"}'
+         # setCloseCode":"true"
+  deploy:
+    name: Deploy
+    needs: change
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - name: Run deployment scripts
+        run: echo Completed Deployment. 
 
   getchange:
     # jobs that must complete successfully before this job will run
-    needs: change
+    needs: deploy
     # type of machine to run the job on
     runs-on: ubuntu-latest
     name: 'ServiceNow DevOps Get Change'
@@ -311,10 +312,3 @@ jobs:
       # - name: Outcome of ServiceNow DevOps Update Change
       #   run: echo 'Outcome of ServiceNow DevOps Update Change is -> ${{ steps.update_change.outputs.status }}'  >> $GITHUB_OUTPUT
  
-  deploy:
-    name: 'Deploy'
-    needs: updatechange
-    runs-on: ubuntu-latest
-    steps:
-    - name: Run deployment scripts
-      run: echo 'Deployment step in progress...'
