--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -223,7 +223,7 @@ jobs:
           
   change:
     name: Change Request
-    needs: build
+    needs: registerPackage
     runs-on: ubuntu-latest
     steps:     
       - name: ServiceNow DevOps Change Attributes
