--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -4,8 +4,8 @@ name: CD GitHub workflow
 
 on:
   workflow_run:
-    workflows: [ "CI GitHub workflow" ]
-    types: [completed]
+    # workflows: [ "CI GitHub workflow" ]
+    # types: [completed]
 
 jobs:
   registerPackage:
