--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -2,7 +2,7 @@
 
 name: CD GitHub workflow
 
-# on:
+on: workflow_dispatch
 #   workflow_run:
     # workflows: [ "CI GitHub workflow" ]
     # types: [completed]
