--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -2,7 +2,8 @@
 
 name: CD GitHub workflow
 
-on: workflow_dispatch
+# on: workflow_dispatch
+on:
   workflow_run:
     workflows: [ "CI GitHub workflow" ]
     types: [completed]
