--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -14,7 +14,7 @@ on: workflow_dispatch
 jobs:
   # build:
   #  runs-on: ubuntu-latest
-  
+
   #  steps:
   #  # This action checks out the code from the repository
   #  - name: Checkout Code
@@ -42,7 +42,7 @@ jobs:
   #         jf rt bce
   #         # Publish build info
   #         jf rt bp
-          
+
   #  # Download the JFrog Artifact, in the below we are Downloading README.md artifact.
   #  - name: Download Artifact
   #    run: |
@@ -77,7 +77,7 @@ jobs:
   #   steps:
   #   - name: Checkout
   #     uses: actions/checkout@v4.0.0
-        
+
   #   - name: Run Tests with Maven
   #     run: mvn -B test --file pom.xml
 
@@ -139,7 +139,7 @@ jobs:
   #  steps:
   #  - name: Checkout
   #    uses: actions/checkout@v4.0.0
-  
+
   #  - name: ServiceNow DevOps Sonar Scan Results
   #  # You may pin to the exact commit or the version.     
   #    uses: ServiceNow/servicenow-devops-sonar@v3.1.0
@@ -220,7 +220,7 @@ jobs:
   #         package-name: 'app-devops-change-velocity-cicd.war'
   #         # Display Name of Job
   #         job-name: 'Register Package'
-          
+
   change:
     name: Change Request
     needs: build
@@ -236,15 +236,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Change Request'
-          change-request: '{
-          "attributes":{"requested_by":{"name": "DevOps System"},
-          "assignment_group":{"name": "Change management"},
-          "priority": "2",
-          "comments": "This is a sample pipeline script to be added in your change step It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using , making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32.",
-          "work_notes": "Update this to work_notes",
-          "start_date": "",
-          "end_date": ""}
-          }'
+          change-request: '{"autoCloseChange":true,"attributes":{"chg_model": {"name": "Normal" },"short_description":"Automated Software Deployments","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed."}}'  
           interval: '100'
           timeout: '3600'
           deployment-gate: '{"environment":"prod","jobId":"deploy","jobName":"Deploy"}'
@@ -317,7 +309,6 @@ jobs:
           change-request-number: ${{needs.getchange.outputs.change-request-number}}
           # The customized inputs to create change with the requested details.
           change-request-details: '{"state":"3","close_code":"successful_issues","close_notes":"Test results successful"}'
-          
+
       # - name: Outcome of ServiceNow DevOps Update Change
       #   run: echo 'Outcome of ServiceNow DevOps Update Change is -> ${{ steps.update_change.outputs.status }}'  >> $GITHUB_OUTPUT
- 
