--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -73,10 +73,64 @@ jobs:
           # start_date: Enter the planned start date
           # end_date: Enter the planned end date
 
-  deploy:
-    name: 'Deploy'
+ getchange:
+    # jobs that  must complete successfully before this job will run
     needs: change
+    # type of machine to run the job on
     runs-on: ubuntu-latest
+    if: always()
+    name: 'ServiceNow DevOps Get Change'
+    outputs:
+      change-request-number: ${{ steps.get_change.outputs.change-request-number }}
     steps:
-    - name: Run deployment scripts
-      run: echo 'Deployment step in progress...'
+      - name: ServiceNow DevOps Get Change
+        # You may pin to the exact commit or the version.
+        # uses: ServiceNow/servicenow-devops-get-change@0f8b1914adeaec764a4286bdd9cba73ed1c6097f
+        uses: ServiceNow/servicenow-devops-get-change@v4.1.0
+        id: get_change
+        with:
+          # ServiceNow Instance URL
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # Devops Integration Token
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+          devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+          # Orchestration Tool Id
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # The inputs to identify change at Servicenow and GET it.
+          change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow DevOps Change"}'
+
+      - name: Output of ServiceNow DevOps Get Change
+        run: echo 'Output of ServiceNow DevOps Get Change is -> change-request-number = ${{ steps.get_change.outputs.change-request-number }}' >> $GITHUB_OUTPUT
+
+  updatechange:
+    # jobs that must complete successfully before this job will run
+    needs: getchange
+    # type of machine to run the job on
+    runs-on: ubuntu-latest
+    name: 'ServiceNow DevOps Update Change'
+    if: always()
+    steps:
+      - name: ServiceNow DevOps Update Change
+        # You may pin to the exact commit or the version.
+        # uses: ServiceNow/servicenow-devops-update-change@66d51cb13684d8287a763bc3f4dc4531c6ab3306
+        uses: ServiceNow/servicenow-devops-update-change@v3.1.0
+        id: update_change
+        with:
+          # ServiceNow Instance URL
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # ServiceNow Devops security token
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+          devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+          # Orchestration Tool Id of the tool created in ServiceNow
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # Change Request Number to be Updated
+          change-request-number: ${{needs.getchange.outputs.change-request-number}}
+          # The customized inputs to create change with the requested details.
+          change-request-details: '{"state":"3","close_code":"successful_issues","close_notes":"Test results successful"}'
+          
