--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -1,13 +1,183 @@
-# This workflow uses ServiceNow custom actions that are certified by ServiceNow.
-name: CD GitHub workflow
-on:
-  workflow_run:
-    workflows: [ "CI GitHub workflow" ]
-    types: [completed]
+ # This workflow uses ServiceNow custom actions that are certified by ServiceNow. Testing the pipeline test. check the IB
 
-jobs:
+
+name: CD GitHub workflow 
+on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, reopened, merged, closed, synchronize]
+    branches:
+      - master
+      - main
+      - test03
+# on: 
+#   schedule:
+#     - cron: '*/2 * * * *' 
+#RC1
+
+jobs: 
+  build:
+    name: 'Build' 
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn clean compile
+
+  test:
+    name: 'Test'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: ServiceNow DevOps Unit Test Results
+        uses: ServiceNow/servicenow-devops-test-report@v4.1.0
+        with:
+          # Devops Integration Token
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          # ServiceNow Instance Name
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # Orchestration Tool Id
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Job Name
+          job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # JUnit xml report file name with path
+          xml-report-filename: testng.xml
+        
+
+  # test2:
+  #   name: 'Test2'
+  #   needs: test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
+  #     - name: ServiceNow DevOps Unit Test Results for unit test          
+  #       uses: ServiceNow/servicenow-devops-test-report@v4.1.0
+  #       with:
+  #         # # Devops Integration Token
+  #         # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #         devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+  #         devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+  #         # ServiceNow Instance Name
+  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
+  #         # Orchestration Tool Id
+  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+  #         # Job Name
+  #         job-name: 'Test2' # Should be same name as declared in 'name' clause of the current Stage
+  #         # Github Context
+  #         context-github: ${{ toJSON(github) }}
+  #         # JUnit xml report file name with path
+  #         xml-report-filename: testng.xml #if only JUnit tests, use target/surefire-reports/testng-results.xml
+          # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
+
+   
+
+  registerArtifact:
+    name: 'RegisterArtifact'
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: ServiceNow DevOps Register Artifact
+    # You may pin to the exact commit or the version.          
+      uses: ServiceNow/servicenow-devops-register-artifact@v3.1.0
+      with:
+          devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+          devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+          # Devops Integration Token
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          # ServiceNow Instance URL
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # Orchestration Tool Id
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Display Name of the Job
+          job-name: 'Register Artifact'
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # List of Artifacts to be registered
+          artifacts: '[
+             {
+                  "name": "app-devops-cicd.jar",
+                  "version": "1.${{ github.run_number }}",
+                  "semanticVersion": "1.${{ github.run_number }}.0",
+                  "repositoryName": "${{ github.repository }}"
+              }
+           ]'
+
+  sonarScan:
+   name: 'Sonar Scan'
+   # if: ${{ github.ref != 'refs/heads/main' }}
+   needs: registerArtifact
+   runs-on: ubuntu-latest
+   steps:
+   - name: Checkout
+     uses: actions/checkout@v3.1.0
+  
+   - name: ServiceNow DevOps Sonar Scan Results
+   # You may pin to the exact commit or the version.     
+     uses: ServiceNow/servicenow-devops-sonar@v3.1.0
+     with:
+         # ServiceNow Instance URL
+         instance-url: ${{ secrets.SN_INSTANCE_URL }}
+         # Devops Integration Token
+         # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+         # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+         # Orchestration Tool Id
+         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+         # Github Context
+         context-github: ${{ toJSON(github) }}
+         # Display Name of the Job
+         job-name: 'Sonar Scan'
+         # Sonar Host URL
+         sonar-host-url: ${{ secrets.SONAR_URL }}
+         # Sonar Project Key
+         sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+
+  # ServiceNowSecurityScanResults:
+  #   # type of machine to run the job on
+  #   runs-on: ubuntu-latest
+  #   name: ServiceNow Security Scan Results
+  #   # if: ${{ github.ref != 'refs/heads/main' }}
+  #   if: always()
+  #   needs: sonarScan
+  #   steps:
+  #     - name: ServiceNow DevOps Security Results
+  #       uses: ServiceNow/servicenow-devops-security-result@v3.1.0
+  #       with:
+  #           # DevOps Integration Token of GitHub tool created in ServiceNow instance for token based authentication.
+  #           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #           # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+  #           # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+  #           # ServiceNow Instance URL
+  #           instance-url: ${{ secrets.SN_INSTANCE_URL }}
+  #           # Orchestration Tool Id
+  #           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+  #           # GitHub Context
+  #           context-github: ${{ toJSON(github) }}
+  #           # Display Name of the Job
+  #           job-name: 'ServiceNow Security Scan Results'
+  #           security-result-attributes: '{"scanner": "Veracode", "applicationName": "10kflaws-72"}'
+  #           scanner: Scanning tool and is required e.g. Veracode.
+  #           applicationName: Name of your Veracode application and is required. This attribute is applicable only for Veracode.
+  #           buildVersion: Veracode Scan name /build version and is optional. This attribute is applicable only for Veracode.
+  #           securityToolId: Security tool onboarded in ServiceNow (sys_id of the onboarded security tool) and is optional.
+
   registerPackage:
     name: 'Register Package'
+    needs: [sonarScan]
     runs-on: ubuntu-latest
     steps:
     - name: ServiceNow DevOps Register Package
@@ -15,9 +185,12 @@ jobs:
       uses: ServiceNow/servicenow-devops-register-package@v3.1.0
       with:
           # Devops Integration Token
+          # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+          # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           # ServiceNow Instance URL
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          
           # Orchestration Tool Id of the tool created in ServiceNow
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           # Github Context
@@ -25,52 +198,50 @@ jobs:
           # List of Artifacts in JSON format
           artifacts: '[
               {
-                  "name": "app-devops-ci.jar",
+                  "name": "app-devops-cicd.jar",
                   "version": "1.${{ github.run_number }}",
                   "semanticVersion": "1.${{ github.run_number }}.0",
                   "repositoryName": "${{ github.repository }}"
               }
-          ]'
+           ]'
           # Name of the Package that contains list of artifacts
-          package-name: 'app-devops-change-velocity.war'
+          package-name: 'app-devops-change-velocity-cicd.war'
           # Display Name of Job
           job-name: 'Register Package'
 
   change:
-    # jobs that must complete successfully before this job will run
+    name: Change Request
+    if: always()
     needs: registerPackage
-    # type of machine to run the job on
     runs-on: ubuntu-latest
-    name: 'ServiceNow DevOps Change'
-    steps:
-      - name: ServiceNow Change
+    steps:     
+      - name: ServiceNow DevOps Change Attributes
         uses: ServiceNow/servicenow-devops-change@v4.1.0
         with:
-          # Devops Integration Token
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          # ServiceNow Instance URL
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Orchestration Tool Id
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # GitHub Context
           context-github: ${{ toJSON(github) }}
-          # Display Name of the Job
-          job-name: 'ServiceNow DevOps Change'
-          change-request: '{
-          "attributes":{"requested_by":{"name": "DevOps System"},
-          "assignment_group":{"name": "Change management"},
-          "priority": "2",
-          "comments": "This is a sample pipeline script to be added in your change step It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using , making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32.",
-          "work_notes": "Update this to work_notes",
-          "start_date": "",
-          "end_date": ""}
-          }'
-          # You can specify the requested_by attribute either with name or sys_id. Example: "requested_by":{"name": "Test User"} or "requested_by": "62826bf03710200044e0bfc8bcbe5df1"
-          # You can specify the assignment_group attribute either with name or sys_id. Example: "assignment_group":{"name": "Change Approval Team"} or "assignment_group": "5f721d93c0a8010e015533746de18bf9"
-          # start_date: Enter the planned start date
-          # end_date: Enter the planned end date
+          job-name: 'Change Request'
+          change-request: '{"autoCloseChange":true,"attributes":{"chg_model": {"name": "Normal" },"short_description":"Automated Software Deployments","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed."}}'  
+          interval: '100'
+          timeout: '3600'
+          # changeCreationTimeOut: ;'1000'
+          # deployment-gate: '{"environment":"prod","jobName":"Deploy"}'
+          #chg_model":"007c4001c343101035ae3f52c1d3aeb2"
+        
+  # deploy:
+  #   name: 'Deploy'
+  #   needs: change
+  #   runs-on: ubuntu-latest
+  #   environment: prod
+  #   steps:
+  #     - name: Run deployment scripts
+  #       run: echo Completed Deployment. 
 
- getchange:
+  getchange:
     # jobs that  must complete successfully before this job will run
     needs: change
     # type of machine to run the job on
@@ -97,7 +268,7 @@ jobs:
           # Github Context
           context-github: ${{ toJSON(github) }}
           # The inputs to identify change at Servicenow and GET it.
-          change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow DevOps Change"}'
+          change-details: '{"build_number":"","pipeline_name":"","stage_name":"Change Request"}'
 
       - name: Output of ServiceNow DevOps Get Change
         run: echo 'Output of ServiceNow DevOps Get Change is -> change-request-number = ${{ steps.get_change.outputs.change-request-number }}' >> $GITHUB_OUTPUT
@@ -131,3 +302,5 @@ jobs:
           # The customized inputs to create change with the requested details.
           change-request-details: '{"state":"3","close_code":"successful_issues","close_notes":"Test results successful"}'
           
+      # - name: Outcome of  ServiceNow DevOps Update Change
+      #   run: echo 'Outcome of ServiceNow DevOps Update Change is -> ${{ steps.update_change.outputs.status }}'  >> $GITHUB_OUTPUT    
