--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -3,13 +3,14 @@
 
 name: CD GitHub workflow 
 on:
-  workflow_dispatch:
-  pull_request:
-    types: [opened, reopened, merged, closed, synchronize]
-    branches:
-      - master
-      - main
-      - test03
+  workflows: [ "CI GitHub workflow" ]
+  types: [completed]
+  # pull_request:
+  #   types: [opened, reopened, merged, closed, synchronize]
+  #   branches:
+  #     - master
+  #     - main
+  #     - test03
 # on: 
 #   schedule:
 #     - cron: '*/2 * * * *' 
