--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -190,7 +190,7 @@ jobs:
 
   registerPackage:
     name: 'Register Package'
-    needs: [sonarScan]
+    needs: [ServiceNowSecurityScanResults]
     runs-on: ubuntu-latest
     steps:
     - name: ServiceNow DevOps Register Package
@@ -223,7 +223,7 @@ jobs:
 
   change:
     name: Change Request
-    needs: build
+    needs: registerPackage
     runs-on: ubuntu-latest
     steps:     
       - name: ServiceNow DevOps Change Attributes
