--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -54,6 +54,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           # Job Name
           job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
+          test-summary-name: 'Mona Test Summary'
           # Github Context
           context-github: ${{ toJSON(github) }}
           # JUnit xml report file name with path
