--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -2,7 +2,7 @@
 
 name: CICD GitHub workflow with V1
 on: 
-   # workflow_dispatch
+   workflow_dispatch
   push:
     branches: [ "main" ]
   pull_request:
