--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -202,7 +202,7 @@ jobs:
           timeout: '3600'
           changeCreationTimeOut: ;'1000'
           deployment-gate: '{"environment":"prod","jobName":"Deploy"}'
-          chg_model":"007c4001c343101035ae3f52c1d3aeb2"
+          # chg_model":"007c4001c343101035ae3f52c1d3aeb2"
 
   deploy:
     name: 'Deploy'
