--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -230,7 +230,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:     
       - name: ServiceNow DevOps Change Attributes
-        uses: ServiceNow/servicenow-devops-change@scratch/dev
+        uses: ServiceNow/servicenow-devops-change@main
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
