--- a/.github/workflows/cicd-Workflow-V1.yml
+++ b/.github/workflows/cicd-Workflow-V1.yml
@@ -214,7 +214,7 @@ jobs:
 
   getchange:
     # jobs that  must complete successfully before this job will run
-    needs: deploy
+    needs: change
     # type of machine to run the job on
     runs-on: ubuntu-latest
     if: always()
